# mahjong

./: .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  README.md  call_mahjong.py  docker-compose.yml  settings.json
.gemini/: settings.json
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: AndroidAssetResolver.cpp  AndroidAssetResolver.h  CMakeLists.txt  mahjong_jni.cpp
android/app/src/main/java/com/mahjong/hk/: AssetExtractor.kt  MainActivity.kt  NativeLib.kt
android/app/src/main/res/values/: strings.xml  themes.xml
assets/shaders/: lighting.fs  lighting.vs
core/: AssetResolver.h  CMakeLists.txt  DataUploader.h  GameController.cpp  GameController.h  GameRecorder.cpp  GameRecorder.h  GameSnapshot.h  InputEvent.h  JsonHelpers.h  mahjong_api.cpp  mahjong_api.h
core/ai/: AdaptiveEngine.cpp  AdaptiveEngine.h  HandSampler.cpp  HandSampler.h  InferenceEngine.cpp  InferenceEngine.h  RoundSimulator.cpp  RoundSimulator.h
docs/: ARCHITECTURE.md  ML_ARCHITECTURE.md  REPLAY_UPLOAD_PLAN.md
ios/: CMakeLists.txt  build_ios.sh  rcore_ios.c
ios/MahjongHK/: GameViewController.swift  IOSAssetResolver.cpp  IOSAssetResolver.h  Info.plist  LaunchScreen.storyboard  MahjongHK-Bridging-Header.h  NSURLSessionUploader.h  NSURLSessionUploader.mm  RaylibBridge.h  RaylibBridge.mm
ios/gl_shims/EGL/: egl.h
ios/gl_shims/GLES2/: gl2.h  gl2ext.h
mcp/: game_wrapper.py  run.sh  server.py
platform/mobile/: GestureRecognizer.cpp  GestureRecognizer.h
scripts/: assemble_tile_assets.sh  benchmark.py  download_libtorch.sh  export_weights.py  train.py
server/: Dockerfile  app.py  docker-compose.yml  models.py  requirements.txt
src/: main.cpp
src/ai/: CooperativeStrategy.cpp  CooperativeStrategy.h  DQNTrainer.cpp  DQNTrainer.h  HandEvaluator.cpp  HandEvaluator.h  MahjongNet.cpp  MahjongNet.h  RLFeatures.h  ShantenCalculator.cpp  ShantenCalculator.h
src/game/: Game.cpp  Game.h  GameState.h  TurnManager.cpp  TurnManager.h
src/net/: HttpUploader.cpp  HttpUploader.h
src/player/: AIPlayer.cpp  AIPlayer.h  Hand.cpp  Hand.h  HumanPlayer.cpp  HumanPlayer.h  Meld.h  Player.h
src/render/: Renderer.cpp  Renderer.h  TileRenderer.cpp  TileRenderer.h  TileTextureAtlas.cpp  TileTextureAtlas.h
src/scoring/: PaymentCalculator.cpp  PaymentCalculator.h  Scoring.cpp  Scoring.h  WinDetector.cpp  WinDetector.h
src/tiles/: Tile.h  TileDefs.h  TileEnums.h  Wall.cpp  Wall.h
tests/: test_atlas_tiles.cpp  test_scoring.cpp
tools/TilePreview/: MathUtilities.swift  OrbitalCamera.swift  Package.swift  PreviewRenderer.swift  ShaderTypes.h  Shaders.metal  TileAtlas.swift  TileMeshFactory.swift  TilePreviewApp.swift
